# IaC-Drift-Reconciler

./: push-output.txt
IaCDriftReconciler/: Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  validate_tasks.py
IaCDriftReconciler/server/: IaCDriftReconciler_environment.py  __init__.py  app.py
IaCDriftReconciler/tasks/: task_easy.json  task_hard.json  task_medium.json
