# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-IaCDriftReconciler"
version = "0.1.0"
description = "Iacdriftreconciler environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    "openenv-core[core]>=0.2.2",
    # OpenAI-compatible client for inference.py
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m IaCDriftReconciler.server.app
server = "IaCDriftReconciler.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["IaCDriftReconciler", "IaCDriftReconciler.server"]
package-dir = { "IaCDriftReconciler" = ".", "IaCDriftReconciler.server" = "server" }

[tool.setuptools.package-data]
# Include task JSON files so they are accessible at runtime inside the container
"IaCDriftReconciler" = ["tasks/*.json"]